-Added a new Separator to visually identify where the expanded blocks start and end. -Changed the right arrow to change from right pointing to down pointing. -Removed the direct Market Data download and replaced by posting an update request. -Changed the API for the TimeStamp record definition.
Former-commit-id: 77b80a0301da386f1f79949cac95a0604bdcbda6

--- a/Neocom.WebUI/src/app/components/location/location.component.css
+++ b/Neocom.WebUI/src/app/components/location/location.component.css
@@ -9,3 +9,11 @@
   line-height: 16px;
   /*width: 88px;*/
 }
+
+.neocom-arrow-expanded {
+  transform: rotate(90deg);
+}
+
+.panel-expanded {
+  background-color: #0F0F20;
+}
