--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -1,5 +1,5 @@
 <div class="neocom-panel" id="content">
-  <div class="panel-collapsed" (click)="toggleExpanded()" [ngClass]="{expanded: node.expanded}">
+  <div class="panel-collapsed" (click)="toggleExpanded()" [ngClass]="{'panel-expanded': node.expanded}">
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
       <tr>
         <td>
@@ -16,8 +16,8 @@
           </div>
         </td>
         <td width="20%" class="neocom-panel-right-box" align="right ">
-          <div class="neocom-classname neocom-ts14">{{node.region}} ► {{node.constellation}}</div>
-          <div class="stack-counter lined-bottomline">5</div>
+          <div class="neocom-marked neocom-marked-glow neocom-ts14">{{node.region}} ► {{node.constellation}}</div>
+          <div class="stack-counter lined-bottomline" style="padding-bottom: 1px;">{{node.stackCount}}</div>
           <div class="neocom-label label-small">ITEMS</div>
         </td>
         <td *ngIf="hasMenu()" width="5%" class="neocom-panel-menu">
@@ -28,8 +28,8 @@
           </div> -->
         </td>
         <td width="5%" class="neocom-arrow-box">
-          <img class="neocom-arrow" *ngIf="!node.expanded " src="/assets/icons/arrowleft.png ">
-          <img class="neocom-arrow" *ngIf="node.expanded " src="/assets/icons/arrowright.png ">
+          <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
+          <!-- <img class="neocom-arrow" *ngIf="node.expanded " src="/assets/icons/arrowright.png "> -->
         </td>
       </tr>
       <tr>
