--- a/Neocom.WebUI/src/app/pages/planetary-manager-page/planetary-manager-page.component.html
+++ b/Neocom.WebUI/src/app/pages/planetary-manager-page/planetary-manager-page.component.html
@@ -13,5 +13,6 @@
     <neocom-region *ngIf="render.jsonClass == 'Region'" [viewer]="getViewer()" [node]="render"></neocom-region>
     <neocom-location *ngIf="render.jsonClass == 'Location'" [viewer]="getViewer()" [node]="render"></neocom-location>
     <neocom-asset *ngIf="render.jsonClass == 'Asset'" [viewer]="getViewer()" [node]="render"></neocom-asset>
+    <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
   </div>
 </div>
