--- a/Neocom.WebUI/src/app/components/asset/asset.component.html
+++ b/Neocom.WebUI/src/app/components/asset/asset.component.html
@@ -6,7 +6,7 @@
           <img class="neocom-icon iconsize-48" src="http://image.eveonline.com/Type/{{node.typeID}}_64.png">
         </td>
         <td class="neocom-panel-column" width="80%">
-          <div class="neocom-selectable-name">{{node.system}}</div>
+          <div class="neocom-selectable-name">{{node.name}}</div>
           <div class="neocom-data imaki-ff">[{{node.assetID}}]-{{node.category}}/{{node.groupName}}</div>
           <div class="neocom-data imaki-ff">
             <span class="neocom-data mons-olympia-ff neocom-ts16 left-data">{{node.item.baseprice | number:'1.2-2'}} ISK</span>
@@ -19,7 +19,7 @@
           </div>
         </td>
         <td width="20%" class="neocom-panel-right-box" align="right ">
-          <div class="stack-counter lined-bottomline">{{node.quantity}}</div>
+          <div class="stack-counter lined-bottomline">{{node.quantity | number:'1.0-0'}}</div>
           <div class="neocom-label right-data">NO. ITEMS</div>
           <div class="neocom-ts16 lined-bottomline right-data" style="padding-top: 0px;">{{totalVolume() | number:'1.0-0'}} M3</div>
           <div class="neocom-label right-data">VOLUME</div>
