-Added a new page for the Planetary Optimization and more components to render that output. -Tested the code to get the list of Resources after a Planetary Optimization. -Added HTML code to render the Processing Action and the Resources.
Former-commit-id: 886f4a60b5283ddeeeb7b76b3d809dc76f885b0e

--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -10,7 +10,7 @@
           <span class="neocom.label">[{{node.id}}]</span>
           <div class="lined-bottomline">
             <span class="neocom-data imaki-ff neocom-ts14" style="color: red;">[{{node.securityValue | number:'1.1-1'}}]</span>
-            <span class="neocom-data imaki-ff neocom-ts14"> {{node.name}}</span>
+            <span class="neocom-data imaki-ff neocom-ts14">{{node.name}}</span>
           </div>
           <div class="neocom-label">
             <span class="">STATION</span>
@@ -18,7 +18,7 @@
         </td>
         <td width="20%" class="neocom-panel-right-box" align="right ">
           <div class="neocom-classname neocom-ts14">{{node.region}} ► {{node.constellation}}</div>
-          <div class="stack-counter lined-bottomline">5</div>
+          <div class="stack-counter lined-bottomline">{{node.stackCount}}</div>
           <div class="neocom-label label-small">ITEMS</div>
         </td>
         <td *ngIf="hasMenu()" width="5%" class="neocom-panel-menu">
