-[WIP] Updated the rendering of the Action Resources.
Former-commit-id: 4e899e46c62d752277dc55bf6f0df88aa468fd22

--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -5,6 +5,7 @@
 <div width="60%" height="50px">
   <span class="spinner"></span>
 </div>
+<neocom-pilot4-detail [pilot]="pilot"></neocom-pilot4-detail>
 <div *ngIf="!downloading" class="panel-group">
   view-adapter.component running...
   <div *ngFor="let render of adapterViewList">
