--- a/Neocom.WebUI/src/app/components/processing-action/processing-action.component.html
+++ b/Neocom.WebUI/src/app/components/processing-action/processing-action.component.html
@@ -1,7 +1,7 @@
 <p>
   processing-action works!
 </p>
-<div class="neocom-panel" id="content">
+<div class="neocom-panel" id="content2">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
     <tr>
       <td width="45%" class="processing-inputs">
