--- a/Neocom.WebUI/src/app/components/resource/resource.component.html
+++ b/Neocom.WebUI/src/app/components/resource/resource.component.html
@@ -1,13 +1,19 @@
-<div class="neocom-panel2" id="content">
+<div class="neocom-panel-inside" id="content-small">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
     <tr>
-      <td>
+      <td width="36px">
         <img class="neocom-icon iconsize-32" src="/assets/icons/planets.png">
       </td>
-      <td width="90%">
+      <td>
         <div>
           <span class="neocom-marked-name">{{node.name}}</span><br>
-          <span class="stackCount">{{node.quantity}}</span>
+          <span class="stackCount">{{node.quantity | number:'1.0-0'}}</span>
+        </div>
+      </td>
+      <td width="45%">
+        <div>
+          <span class="stackCount lined-bottomline neoocom-ts12">{{value | number:'1.0-0'}} ISK</span><br>
+          <span class="neocom-label">MARKET VALUE</span>
         </div>
       </td>
     </tr>
