--- a/Neocom.WebUI/src/app/components/processing-action/processing-action.component.css
+++ b/Neocom.WebUI/src/app/components/processing-action/processing-action.component.css
@@ -24,3 +24,17 @@
   font-family: "Mons Olympia";
   width: 60%;
 }
+
+.processing-result-name {
+  font-family: "Mons Olympia";
+  color: #50B71D;
+  font-size: 20px;
+  line-height: 1.3;
+  text-shadow: 0px 0px 2px #50B71D;
+  font-weight: 500;
+  margin-left: 5px;
+}
+
+.action-value {
+  margin: 3px;
+}
