--- a/Neocom.WebUI/src/app/components/resource/resource.component.html
+++ b/Neocom.WebUI/src/app/components/resource/resource.component.html
@@ -1,5 +1,5 @@
 <div class="neocom-panel-inside" id="content-small">
-  <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
+  <table class="neocom-panel-container" cellspacing="0" cellpadding="0" [ngClass]="{'target-resource': node.target}">
     <tr>
       <td width="36px">
         <img class="neocom-icon iconsize-32" src="/assets/icons/planets.png">
@@ -10,9 +10,9 @@
           <span class="stackCount">{{node.quantity | number:'1.0-0'}}</span>
         </div>
       </td>
-      <td width="45%">
+      <td width="80%" align="right">
         <div>
-          <span class="stackCount lined-bottomline neoocom-ts12">{{value | number:'1.0-0'}} ISK</span><br>
+          <span class="stackCount lined-bottomline neoocom-ts12">{{getMarketValue() | number:'1.0-0'}} ISK</span><br>
           <span class="neocom-label">MARKET VALUE</span>
         </div>
       </td>
