-Removed obsolete pages. -Upgraded the presentation of the Login list to the new pattern. -Added the download of the Login information from the backend service. -Synchronized the backend and UI models. -Added a new controller to get the Login list.
Former-commit-id: af2a5c28919d625529264ecdd48866ae0149c7cd

--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -1,6 +1,6 @@
 <div class="neocom-panel" id="content">
   <div class="panel-collapsed" [ngClass]="{'panel-expanded': node.expanded}">
-    <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
+    <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
       <tr>
         <td>
           <img class="neocom-icon iconsize-48" src="{{node.urlLocationIcon}}">
