--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -226,6 +226,29 @@ body {
 }
 
 
+/* P A N E T    T I T L I N G */
+
+.title {
+  font-size: 30px;
+  font-family: "Elemental";
+  color: orange;
+  text-shadow: 0px 0px 6px orange;
+}
+
+.subtitle {
+  font-size: 24px;
+  font-family: "Elemental";
+  color: white;
+  text-shadow: 0px 0px 6px white;
+}
+
+.title-box {
+  padding: 5px;
+  box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  border-bottom: #A0A0F0 2px solid;
+}
+
+
 /* P A N E L S */
 
 .neocom-panel {
