--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -1,6 +1,6 @@
 <div class="neocom-panel" id="content">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
-    <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']">
+    <!-- <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']"> -->
       <tr>
         <td><img class="neocom-icon neocom-icon48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
         <td width="80% " class="neocom-panel-column">
@@ -17,6 +17,6 @@
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
         </td>
       </tr>
-    </a>
+    <!-- </a> -->
   </table>
 </div>
