--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -1,9 +1,9 @@
 /* G E N E R A L    D E F I N I T I O N S*/
 
 body {
-  font-family: 'Roboto', sans-serif;
   background-color: black;
   color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -29,9 +29,9 @@ body {
 
 @font-face {
   font-family: "Elemental";
-  src: url("./assets/fonts/Elemental End.ttf");
-  font-weight: normal;
   font-style: normal;
+  font-weight: normal;
+  src: url("./assets/fonts/Elemental End.ttf");
 }
 
 .elemental-ff {
@@ -40,37 +40,37 @@ body {
 
 @font-face {
   font-family: "Elemental";
+  font-style: italic;
+  font-weight: normal;
   src: url("./assets/fonts/Elemental End Italic.ttf");
-  font-weight: normal;
-  font-style: italic;
 }
 
 @font-face {
   font-family: 'Mons Olympia';
+  font-style: italic;
+  font-weight: bold;
   src: url("./assets/fonts/Mons Olympia Bold Italic.otf");
-  font-weight: bold;
-  font-style: italic;
 }
 
 @font-face {
   font-family: 'Mons Olympia';
+  font-style: normal;
+  font-weight: bold;
   src: url("./assets/fonts/Mons Olympia Bold.otf");
-  font-weight: bold;
-  font-style: normal;
 }
 
 @font-face {
   font-family: 'Mons Olympia';
-  src: url("./assets/fonts/Mons Olympia Italic.otf");
-  font-weight: normal;
   font-style: italic;
+  font-weight: normal;
+  src: url("./assets/fonts/Mons Olympia Italic.otf");
 }
 
 @font-face {
   font-family: 'Mons Olympia';
-  src: url("./assets/fonts/Mons Olympia.otf");
-  font-weight: normal;
   font-style: normal;
+  font-weight: normal;
+  src: url("./assets/fonts/Mons Olympia.otf");
 }
 
 .mons-olympia-ff {
@@ -79,16 +79,16 @@ body {
 
 @font-face {
   font-family: 'Imaki';
-  src: url("./assets/fonts/Imaki.otf");
-  font-weight: normal;
   font-style: normal;
+  font-weight: normal;
+  src: url("./assets/fonts/Imaki.otf");
 }
 
 @font-face {
   font-family: 'Imaki';
-  src: url("./assets/fonts/Imaki Bold.otf");
-  font-weight: bold;
   font-style: normal;
+  font-weight: bold;
+  src: url("./assets/fonts/Imaki Bold.otf");
 }
 
 .imaki-ff {
@@ -101,9 +101,9 @@ body {
 .neocom-selectable-name {
   color: #50B71D;
   font-size: 18px;
+  font-weight: 500;
   line-height: 1.3;
   text-shadow: 0px 0px 2px #50B71D;
-  font-weight: 500;
 }
 
 .neocom-data {
@@ -122,8 +122,8 @@ body {
 .neocom-classname {
   color: #0000FF;
   font-size: 16px;
-  text-shadow: 0px 0px 2px #0000FF;
   font-weight: 500;
+  text-shadow: 0px 0px 2px #0000FF;
 }
 
 .neocom-marked-name {
@@ -132,33 +132,33 @@ body {
 
 .neocom-marked-glow {
   color: orange;
-  text-shadow: 0px 0px 2px orange;
   font-weight: 600;
+  text-shadow: 0px 0px 2px orange;
 }
 
 .glow-marked {
   color: orange;
-  text-shadow: 0px 0px 2px orange;
   font-weight: 600;
+  text-shadow: 0px 0px 2px orange;
 }
 
 .glow-white {
   color: white;
-  text-shadow: 0px 0px 2px white;
   font-weight: 600;
+  text-shadow: 0px 0px 2px white;
 }
 
 .glow-red {
   color: red;
-  text-shadow: 0px 0px 2px red;
   font-weight: 600;
+  text-shadow: 0px 0px 2px red;
 }
 
 .neocom-label {
-  font-family: "Imaki";
-  font-weight: normal;
-  font-size: 9px;
   color: white;
+  font-family: "Imaki";
+  font-size: 9px;
+  font-weight: normal;
   line-height: 1.0;
   /*padding-top: 3px;*/
 }
@@ -209,19 +209,20 @@ body {
 }
 
 .lined-bottomline {
-  padding-top: 2px;
   border-bottom: white 1px solid;
+  padding-top: 2px;
 }
 
 
 /* A R R O W   S E C T I O N */
 
 .neocom-arrow-box {
+  cursor: pointer;
+  padding-right: 5px;
   vertical-align: middle;
 }
 
 .neocom-arrow {
-  /*transform: rotate(90deg);*/
   filter: blur(1px);
 }
 
@@ -229,38 +230,39 @@ body {
 /* P A N E T    T I T L I N G */
 
 .title {
-  font-size: 30px;
-  font-family: "Elemental";
   color: orange;
+  font-family: "Elemental";
+  font-size: 30px;
   text-shadow: 0px 0px 6px orange;
 }
 
 .subtitle {
-  font-size: 24px;
-  font-family: "Elemental";
   color: white;
+  font-family: "Elemental";
+  font-size: 24px;
   text-shadow: 0px 0px 6px white;
 }
 
 .title-box {
-  padding: 5px;
-  box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
   border-bottom: #A0A0F0 2px solid;
+  box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  padding: 5px;
 }
 
 
 /* P A N E L S */
 
 .neocom-panel {
-  font-family: "Mons Olympia";
-  background-color: #080808; // Light black
-  cursor: pointer;
+  // Light black
+  /*cursor: default;*/
   line-height: 1.0;
-  margin-bottom: 5px;
-  width: 60%;
-  position: relative;
+  background-color: #080808;
+  font-family: "Mons Olympia";
   height: auto;
+  margin-bottom: 5px;
   opacity: 0.8;
+  position: relative;
+  width: 60%;
 }
 
 .neocom-panel-container {
@@ -277,14 +279,15 @@ body {
 }
 
 #content {
-  background-color: #080808; // Light black
-  cursor: pointer;
+  // Light black
+  /*cursor: pointer;*/
   line-height: 1.0;
-  margin-bottom: 5px;
-  width: 60%;
-  position: relative;
+  background-color: #080808;
   height: auto;
+  margin-bottom: 5px;
   opacity: 0.8;
+  position: relative;
+  width: 60%;
 }
 
 #content:hover {
@@ -292,36 +295,36 @@ body {
 }
 
 #content:before, #content:after, #content>:first-child:before, #content>:first-child:after {
+  border: 2px orange solid;
+  content: ' ';
+  filter: blur(1px);
+  height: 20px;
   position: absolute;
   width: 20px;
-  height: 20px;
-  border: 2px orange solid;
-  filter: blur(1px);
-  content: ' ';
 }
 
 #content:before {
-  top: 0;
-  left: 0;
   border-width: 2px 0 0 2px;
+  left: 0;
+  top: 0;
 }
 
 #content:after {
-  top: 0;
-  right: 0;
   border-width: 2px 2px 0 0;
+  right: 0;
+  top: 0;
 }
 
 #content>:first-child:before {
+  border-width: 0 2px 2px 0;
   bottom: 0;
-  right: 0;
-  border-width: 0 2px 2px 0
+  right: 0
 }
 
 #content>:first-child:after {
+  border-width: 0 0 2px 2px;
   bottom: 0;
-  left: 0;
-  border-width: 0 0 2px 2px
+  left: 0
 }
 
 
@@ -358,11 +361,11 @@ body {
 /* S P I N N E R    D E F I N I T I O N */
 
 .spinner-blue {
-  border-top-color: #0000A0;
   border-bottom-color: #0000A0;
+  border-top-color: #0000A0;
 }
 
 .spinner-red {
-  border-top-color: #FF0000;
   border-bottom-color: #FF0000;
+  border-top-color: #FF0000;
 }
