-Added a new componet to disply the Pilots at the Login expanded list. -Upgraded the styles to allow control of style application precedence. Genral are as classes and specific as id.
Former-commit-id: 43b81a52ad18d242e6f0a9b3731da3832b3ca0dc

--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -2,10 +2,10 @@
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <!-- <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']"> -->
     <tr>
-      <td><img class="neocom-icon neocom-icon48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
+      <td><img class="neocom-icon iconsize-48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
       <td width="80% " class="neocom-panel-column">
         <div>
-          <span class="neocom-selectable-name mons-olympia-ff">{{node.getLoginId()}}</span><br>
+          <span class="neocom-selectable-name">{{node.getLoginId()}}</span><br>
         </div>
       </td>
       <td width="20%" class="neocom-panel-right-box" align="right ">
