--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -4,6 +4,7 @@ body {
   background-color: black;
   color: white;
   font-family: 'Roboto', sans-serif;
+  line-height: 1.0;
 }
 
 
@@ -96,6 +97,66 @@ body {
 }
 
 
+/* S I Z E S */
+
+#neocom-ts18 {
+  font-size: 18px;
+}
+
+#neocom-ts16 {
+  font-size: 16px;
+}
+
+#neocom-ts14 {
+  font-size: 14px;
+}
+
+#neocom-ts12 {
+  font-size: 12px;
+}
+
+#neocom-ts10 {
+  font-size: 10px;
+}
+
+#label-medium {
+  font-size: 12px;
+}
+
+#label-large {
+  font-size: 16px;
+}
+
+.lined-topupline {
+  border-top: white 1px solid;
+}
+
+.lined-bottomline {
+  border-bottom: white 1px solid;
+  padding-top: 2px;
+}
+
+#iconsize-32 {
+  height: 32px;
+  width: 32px;
+}
+
+#iconsize-48 {
+  height: 48px;
+  width: 48px;
+}
+
+#iconsize-60 {
+  height: 60px;
+  width: 60px;
+}
+
+#iconsize-90 {
+  height: 90px;
+  width: 90px;
+}
+
+
 /* C O M M O N    S T Y L E S */
 
 .neocom-selectable-name {
@@ -163,38 +224,10 @@ body {
   /*padding-top: 3px;*/
 }
 
-.label-madium {
-  font-size: 12px;
-}
-
-.label-large {
-  font-size: 16px;
-}
-
 .no-underline {
   font-style: normal;
   font-variant: normal;
   text-decoration: none !important;
-}
-
-.neocom-ts18 {
-  font-size: 18px;
-}
-
-.neocom-ts16 {
-  font-size: 16px;
-}
-
-.neocom-ts14 {
-  font-size: 14px;
-}
-
-.neocom-ts12 {
-  font-size: 12px;
-}
-
-.neocom-ts10 {
-  font-size: 10px;
 }
 
 .stack-counter {
@@ -202,15 +235,6 @@ body {
   font-weight: 600;
   /*padding-bottom: 3px;*/
   padding-top: 3px;
-}
-
-.lined-topupline {
-  border-top: white 1px solid;
-}
-
-.lined-bottomline {
-  border-bottom: white 1px solid;
-  padding-top: 2px;
 }
 
 
@@ -335,26 +359,6 @@ body {
   box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
   margin: 5px;
   /*margin-left: 5px;*/
-}
-
-.iconsize-32 {
-  height: 32px;
-  width: 32px;
-}
-
-.iconsize-48 {
-  height: 48px;
-  width: 48px;
-}
-
-.iconsize-60 {
-  height: 60px;
-  width: 60px;
-}
-
-.iconsize-90 {
-  height: 90px;
-  width: 90px;
 }
 
 
