--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -1,13 +1,11 @@
-<p>
-  pilot-detail-page works!
-</p>
-<neocom-pilot4-detail *ngIf="completed" [pilot]="pilot"></neocom-pilot4-detail>
-<div width="60%" height="50px">
-  <span class="spinner"></span>
+<div class="title-box">
+  <div class="title">Pilot Details</div>
+  <div class="subtitle" *ngIf="!downloading">Selected: {{pilot.name}}</div>
 </div>
-<neocom-pilot4-detail [pilot]="pilot"></neocom-pilot4-detail>
-<div *ngIf="!downloading" class="panel-group">
-  view-adapter.component running...
+<neocom-pilot4-detail *ngIf="!downloading" [pilot]="pilot"></neocom-pilot4-detail>
+<neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
+<!-- <neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central> -->
+<div class="panel-group">
   <div *ngFor="let render of adapterViewList">
     <neocom-pilot-manager *ngIf="render.jsonClass == 'AssetsManager'" [pilot]="pilot" [manager]="render"></neocom-pilot-manager>
     <neocom-pilot-manager *ngIf="render.jsonClass == 'Manager'" [pilot]="pilot" [manager]="render"></neocom-pilot-manager>
