--- a/Neocom.WebUI/src/app/components/header/header.component.css
+++ b/Neocom.WebUI/src/app/components/header/header.component.css
@@ -1,7 +1,10 @@
 .header-box {
-  padding: 10px;
-  box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
   border-bottom: #A0A0F0 2px solid;
+  box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 10px;
+  padding-top: 10px;
 }
 
 .big-header {
@@ -10,8 +13,8 @@
 }
 
 .version {
-  font-size: 20px;
-  font-family: "Elemental";
   color: #50B71D;
+  font-family: "Elemental";
+  font-size: 20px;
   text-shadow: 0px 0px 6px #50B71D;
 }
