-Upgrading the AppModel API. -Adding Separators to the Login. -Updated the spinner to display the time waiting. -Adding asset counter to the Pilot information shown at the Login selection page.
Former-commit-id: efb1a85f66af56a1b142f977917c5156f0137d55

--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -9,7 +9,7 @@
         </div>
       </td>
       <td width="20%" class="neocom-panel-right-box" align="right ">
-        <span *ngIf="node.downloadPending" class="spinner"></span>
+        <div class="neocom-account-class">LOGIN</div>
         <div *ngIf="!node.downloadPending" class="stack-counter lined-bottomline">{{node.getKeyCount()}}</div>
         <div class="neocom-label label-small">CHARACTERS</div>
       </td>
