--- a/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
+++ b/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
@@ -1,10 +1,10 @@
 <div class="title-box">
-  <div class="title">Login Selection</div>
-  <!-- <div class="subtitle">Processing Optimization at Location: {{getTargetLocation()}}</div> -->
+  <div class="title">Capsuleer Selection</div>
 </div>
 <neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
 <div class="panel-group">
   <div *ngFor="let render of loginViewList">
+    <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'NeoComCharacter'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'Pilot'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
