-[WIP] Added a timer to the spinner. -Added the asset counter to the PIlot Detail. -Replaces the hardcoded elements on the header by service methods. -[BUG] Resolving the unique generation of the identifier.
Former-commit-id: e952963839ffd6c77f09f97f089370fa5242c595

--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -7,7 +7,7 @@
         </td>
         <td class="neocom-panel-column" width="80%">
           <span class="neocom-selectable-name">{{node.system}}</span>
-          <span class="neocom.label">[{{node.id}}]</span>
+          <span class="neocom.label">[{{getIdentifier()}}]</span>
           <div class="lined-bottomline">
             <span class="neocom-data imaki-ff neocom-ts14" style="color: red;">[{{node.securityValue | number:'1.1-1'}}]</span>
             <span class="neocom-data imaki-ff neocom-ts14">{{node.name}}</span>
