--- a/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.css
+++ b/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.css
@@ -32,12 +32,13 @@
   /*padding-right: 10px;*/
 }
 
-.stack-counter {
+
+/*.stack-counter {
   font-size: 24px;
   font-weight: 600;
   padding-bottom: 3px;
   padding-top: 3px;
-}
+}*/
 
 .big-label {
   font-size: 12px;
