--- a/Neocom.WebUI/src/app/components/spinner-central/spinner-central.component.html
+++ b/Neocom.WebUI/src/app/components/spinner-central/spinner-central.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="spinner-position">
-    <span>{{getTitle()}}<br>{{getSubTitle()}}</span>
+    <span>{{getTitle()}}<br>Waiting: {{waitTime | date:'mm:ss'}} secs</span>
     <span class="spinner-in spinner-size60"></span>
     <div class="spinner-out spinner-size70 spinner-red"></div>
   </div>
