--- a/Neocom.WebUI/src/app/components/header/header.component.html
+++ b/Neocom.WebUI/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-box">
-  <span class="big-header elemental-ff">NeoCom</span>
+  <span class="big-header elemental-ff">{{getAppName()}}</span>
   <span class="version" style="margin-left:10px;">{{getVersion()}}</span>
 </div>
