--- a/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.html
@@ -7,13 +7,29 @@
         <div class="neocom-marked-name" id="neocom-ts14">{{pilot.delegatedCharacter.corporationName}}</div>
         <div id="neocom-ts14">
           <span class="">{{pilot.characterSheet.gender}}</span> -
-          <span class="neocom-pilot-data">{{pilot.characterSheet.race | lowercase | capitalizeLetter}}</span> -
-          <span class="neocom-pilot-data">{{pilot.characterSheet.bloodLine | lowercase | capitalizeLetter}}</span> -
+          <span class="neocom-pilot-data">{{pilot.characterSheet.race | lowercase | capitalizeLetter}}</span>          -
+          <span class="neocom-pilot-data">{{pilot.characterSheet.bloodLine | lowercase | capitalizeLetter}}</span>          -
           <span class="neocom-pilot-data">{{pilot.characterSheet.ancestry | lowercase | capitalizeLetter}}</span>
         </div>
 
-        <div class="pilot-balance glow-white lined-bottomline">{{pilot.accountBalance | number:'1.2-2'}} ISK</div>
-        <div class="neocom-label">Balance</div>
+        <table cellspacing="0" cellpadding="0" width="100%">
+          <tr>
+            <td align="left">
+              <div class="pilot-balance glow-white lined-bottomline" id="neocom-ts12">{{pilot.accountBalance | number:'1.2-2'}} ISK</div>
+            </td>
+            <td align="right">
+              <div class="stack-counter glow-white lined-bottomline" id="neocom-ts12">{{pilot.assetsManager.assetTotalCount | number:'1.0-0'}}</div>
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              <div class="neocom-label">Balance</div>
+            </td>
+            <td align="right">
+              <div class="neocom-label">Assets</div>
+            </td>
+          </tr>
+        </table>
 
         <span class="neocom-pilot-data neocom-data-size-12">Active Ship:</span>
         <span class="neocom-marked-name">{{pilot.characterInfo.shipName}}</span>
@@ -36,7 +52,10 @@
         </div>
       </td>
       <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
-        <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': pilot.expanded}" src="/assets/icons/arrowright.png ">
+        <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
+      </td>
+      <td width="5%" *ngIf="!isExpandable()">
+        &nbsp;&nbsp;&nbsp;
       </td>
     </tr>
     <!-- <tr class="row-separator" *ngIf="expanded">
