--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
@@ -23,15 +23,6 @@
               </td>
             </tr>
           </table>
-
-
-          <!-- <span class="neocom-pilot-data neocom-data-size-12">Active Ship:</span>
-              <span class="neocom-marked-name">{{node.characterInfo.shipName}}</span> -->
-          <!-- <span class="neocom-pilot-data"> - [{{node.characterInfo.shipTypeName}}]</span><br> -->
-          <!-- <span class="neocom-marked-name neocom-marked-glow label-bottomline" style="font-weight: 400;">{{node.characterInfo.lastKnownLocation}}</span><br>
-            <div class="neocom-label">Located At</div> -->
-          <!-- <span class="neocom-pilot-data neocom-data-size-12">Securiry Status:</span>
-              <span class="neocom-pilot-data neocom-data-size-14">{{node.characterInfo.securityStatus | number:'1.2-2'}}</span> -->
           <span class="neocom-marked-name neocom-marked-glow lined-bottomline" id="neocom-ts12">{{node.characterInfo.skillPoints | number:'1.0-0'}} SP</span><br>
           <div class="neocom-label">Total SP</div>
         </td>
@@ -43,6 +34,9 @@
         </td>
         <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
+        </td>
+        <td width="5%" *ngIf="!isExpandable()">
+          &nbsp;&nbsp;&nbsp;
         </td>
       </tr>
     </a>
