--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -4,7 +4,7 @@
 </div>
 <neocom-pilot4-detail *ngIf="!downloading" [pilot]="pilot"></neocom-pilot4-detail>
 <!-- <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator> -->
-<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Character Managers',subtitle:'-TIMER-'}"><span *ngIf="checkTimer()"></span></neocom-spinner-central>
+<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Capsuleer Data',subtitle:''}"></neocom-spinner-central>
 <div class="panel-group">
   <div *ngFor="let render of adapterViewList">
     <!-- <neocom-pilot-manager *ngIf="render.jsonClass == 'AssetsManager'" [pilot]="pilot" [manager]="render"></neocom-pilot-manager>
