-[BUG] The AssetsManager is no longer present at the Pilot on Login page. Added a new field to solve this. -Rewrite the Separator to allow changing the color or the Presentation. -Upgraded a JdbcPooled connection when accessing the Application Database.
Former-commit-id: 0ec1cb29dc2235170015941cceaa4bceaf7fb79d

--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
@@ -11,7 +11,7 @@
                 <div class="pilot-balance glow-white lined-bottomline" id="neocom-ts12">{{node.accountBalance | number:'1.2-2'}} ISK</div>
               </td>
               <td align="right">
-                <div class="stack-counter glow-white lined-bottomline" id="neocom-ts12">{{node.assetsManager.assetTotalCount | number:'1.0-0'}}</div>
+                <div class="stack-counter glow-white lined-bottomline" id="neocom-ts12">{{node.assetTotalCount | number:'1.0-0'}}</div>
               </td>
             </tr>
             <tr>
