--- a/Neocom.WebUI/src/app/components/separator/separator.component.css
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.css
@@ -1,12 +1,33 @@
-.striped {
-  background-image: url('/assets/redstripesmall.png');
-}
-
-.dotted {
+.solid-orange {
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
   width: 60%;
   border: 1px orange solid;
   box-shadow: inset 0px 0px 4px 1px orange, 0px 0px 4px 1px orange;
+}
+
+.solid-green {
+  height: 4px;
+  line-height: 1.0;
+  opacity: 0.7;
+  width: 60%;
+  border: 1px green solid;
+  box-shadow: inset 0px 0px 4px 1px green, 0px 0px 4px 1px green;
+}
+
+.empty-marker {
+  height: 4px;
+  line-height: 1.0;
+  opacity: 0.7;
+  width: 60%;
+  border: 1px red solid;
+  box-shadow: inset 0px 0px 4px 1px red, 0px 0px 4px 1px red;
+}
+
+.empty-content {
+  font-size: 12px;
+  color: white;
+  margin: 5px;
+  margin-left: 30px;
 }
