--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -3,12 +3,11 @@
   <div class="subtitle" *ngIf="!downloading">Selected: {{pilot.name}}</div>
 </div>
 <neocom-pilot4-detail *ngIf="!downloading" [pilot]="pilot"></neocom-pilot4-detail>
-<!-- <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator> -->
-<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Capsuleer Data',subtitle:''}"></neocom-spinner-central>
+<neocom-separator [viewer]="getViewer()" [node]="headerSeparator"></neocom-separator>
+<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Capsuleer Managers',subtitle:''}"></neocom-spinner-central>
 <div class="panel-group">
   <div *ngFor="let render of adapterViewList">
-    <!-- <neocom-pilot-manager *ngIf="render.jsonClass == 'AssetsManager'" [pilot]="pilot" [manager]="render"></neocom-pilot-manager>
-    <neocom-pilot-manager *ngIf="render.jsonClass == 'Manager'" [pilot]="pilot" [manager]="render"></neocom-pilot-manager> -->
+    <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-planetary-manager *ngIf="render.jsonClass == 'PlanetaryManager'" [pilot]="pilot" [manager]="render"></neocom-planetary-manager>
   </div>
 </div>
