-Removed more outdated files. -Updating Icon style and its use. -Upgraded the Region rendering component. -Processing data received by the PlanetaryManager.
Former-commit-id: f296a7fee15f6f2e1c1bb1ef26d73e7000e348f7

--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -3,7 +3,7 @@
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
       <tr>
         <td>
-          <img class="neocom-icon iconsize-48" src="{{node.urlLocationIcon}}">
+          <img class="neocom-icon" src="{{node.urlLocationIcon}}" id="iconsize-48">
         </td>
         <td class="neocom-panel-column" width="80%">
           <span class="neocom-selectable-name">{{node.system}}</span>
