--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -2,7 +2,7 @@
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <!-- <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']"> -->
     <tr>
-      <td><img class="neocom-icon iconsize-48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
+      <td><img class="neocom-icon" src="/assets/icons/{{node.getPanelIcon()}}" id="iconsize-48"></td>
       <td width="80% " class="neocom-panel-column">
         <div>
           <span class="neocom-selectable-name">{{node.getLoginId()}}</span><br>
