-Minor changes to homologate some components. -Added an optional parameter to force the clearing of the Login data before executing a request. -Return back to single threaded database connection.
Former-commit-id: c9d4139a9b1c21890c202dbf677cb534b3fd8e9b

--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -28,7 +28,7 @@
             </a>
           </div>
         </td>
-        <td width="5%" class="neocom-arrow-box" (click)="toggleExpanded()">
+        <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
         </td>
       </tr>
