-Removed outdated code. -Added the new class Container to the rendering. -Review of the Assets component.
Former-commit-id: d8ed3c1dedfa55a1a59eaef7677e030265ae82e4

--- a/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
+++ b/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <div class="title">Capsuleer Selection</div>
 </div>
 <neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
-<div class="panel-group">
+<div class="neocom-panel-container">
   <div *ngFor="let render of loginViewList">
     <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
