--- a/Neocom.WebUI/src/app/components/container/container.component.html
+++ b/Neocom.WebUI/src/app/components/container/container.component.html
@@ -8,20 +8,20 @@
         <td class="neocom-panel-column" width="80%">
           <div class="neocom-selectable-name">{{node.name}}</div>
           <div class="neocom-data imaki-ff">[{{node.assetID}}]-{{node.category}}/{{node.groupName}}</div>
-          <div class="neocom-data imaki-ff">
+          <!-- <div class="neocom-data imaki-ff">
             <span class="neocom-data mons-olympia-ff neocom-ts16 left-data">{{node.item.baseprice | number:'1.2-2'}} ISK</span>
             <span class="neocom-data mons-olympia-ff neocom-ts16 right-data">{{totalValueIsk() | number:'1.0-0'}} ISK</span>
-          </div>
-          <div class="lined-bottomline">&nbsp;</div>
+          </div> -->
+          <!-- <div class="lined-bottomline">&nbsp;</div>
           <div class="neocom-label">
             <span class="left-data">ITEM VALUE</span>
             <span class="right-data">TOTAL VALUE</span>
-          </div>
+          </div> -->
         </td>
         <td width="20%" class="neocom-panel-right-box" align="right ">
           <div class="stack-counter lined-bottomline">{{node.quantity | number:'1.0-0'}}</div>
           <div class="neocom-label right-data">NO. ITEMS</div>
-          <div class="lined-bottomline right-data" style="padding-top: 0px;" id="neocom-ts16">{{totalVolume() | number:'1.0-0'}} M3</div>
+          <!-- <div class="lined-bottomline right-data" style="padding-top: 0px;" id="neocom-ts16">{{totalVolume() | number:'1.0-0'}} M3</div> -->
           <div class="neocom-label right-data">VOLUME</div>
         </td>
         <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
