--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -127,15 +127,6 @@ body {
   font-size: 16px;
 }
 
-.lined-topupline {
-  border-top: white 1px solid;
-}
-
-.lined-bottomline {
-  border-bottom: white 1px solid;
-  padding-top: 2px;
-}
-
 #iconsize-32 {
   height: 32px;
   width: 32px;
@@ -230,11 +221,20 @@ body {
   text-decoration: none !important;
 }
 
+.lined-topupline {
+  border-top: white 1px solid;
+}
+
+.lined-bottomline {
+  border-bottom: white 1px solid;
+  padding-top: 2px;
+}
+
 .stack-counter {
+  color: white;
   font-size: 22px;
   font-weight: 600;
   padding-top: 2px;
-  color: white;
 }
 
 
@@ -255,7 +255,7 @@ body {
 }
 
 
-/* P A N E T    T I T L I N G */
+/* P A N E L    T I T L I N G */
 
 .title {
   color: orange;
@@ -280,13 +280,15 @@ body {
 
 /* P A N E L S */
 
+.neocom-panel-container {
+  margin-top: 4px;
+}
+
 .neocom-panel {
-  // Light black
-  /*cursor: default;*/
-  line-height: 1.0;
   background-color: #080808;
   font-family: "Mons Olympia";
   height: auto;
+  line-height: 1.0;
   margin-bottom: 5px;
   opacity: 0.8;
   position: relative;
