-Added a new AssetsManager Page and the code to download the new assets structure list.
Former-commit-id: 5326ddcd4f525bb688c13773ff198c810771d250

--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
@@ -1,4 +1,4 @@
-<div class="neocom-panel" id="content">
+<div class="neocom-panel" id="panelborder-green">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',node.getId()]">
       <tr>
