--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.css
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.css
@@ -44,7 +44,56 @@
 }
 
 
-/* C O R N E T   B O R D E R */
+/* C O R N E R   B O R D E R */
+
+#panelborder-green {
+  // Light black
+  /*cursor: pointer;*/
+  line-height: 1.0;
+  background-color: #080808;
+  height: auto;
+  margin-bottom: 5px;
+  opacity: 0.8;
+  position: relative;
+  width: 60%;
+}
+
+#panelborder-green:hover {
+  opacity: 1.0
+}
+
+#panelborder-green:before, #panelborder-green:after, #panelborder-green>:first-child:before, #panelborder-green>:first-child:after {
+  border: 2px green solid;
+  content: ' ';
+  filter: blur(1px);
+  height: 20px;
+  position: absolute;
+  width: 20px;
+}
+
+#panelborder-green:before {
+  border-width: 2px 0 0 2px;
+  left: 0;
+  top: 0;
+}
+
+#panelborder-green:after {
+  border-width: 2px 2px 0 0;
+  right: 0;
+  top: 0;
+}
+
+#panelborder-green>:first-child:before {
+  border-width: 0 2px 2px 0;
+  bottom: 0;
+  right: 0
+}
+
+#panelborder-green>:first-child:after {
+  border-width: 0 0 2px 2px;
+  bottom: 0;
+  left: 0
+}
 
 
 /*background-color: #050505; // Dark black*/
