--- a/Neocom.WebUI/src/app/components/separator/separator.component.html
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'solid-orange': isOrange(),'solid-green': isGreen(),'empty_marker': isEmpty()}">
+<div style="margin-top: 2px;" [ngClass]="{'solid-red': isRed(),'solid-orange': isOrange(),'solid-green': isGreen(),'empty_marker': isEmpty()}">
   <span>&nbsp;</span>
   <span class="empty-content elemental-ff glow-white" *ngIf="isEmpty()">EMPTY</span>
   <span>&nbsp;</span>
