--- a/Neocom.WebUI/src/app/components/planetary-manager/planetary-manager.component.html
+++ b/Neocom.WebUI/src/app/components/planetary-manager/planetary-manager.component.html
@@ -10,7 +10,7 @@
         <td width="20%" class="neocom-panel-right-box" align="right">
           <!-- <div class="big-label ">{{manager.iconName}}</div> -->
           <div class="stack-counter lined-bottomline" style="color: white;">{{manager.assetTotalCount}}</div>
-          <div class="neocom-label"><span>ASSETS</span></div>
+          <div class="neocom-label"><span>RESOURCES</span></div>
         </td>
         <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': pilot.expanded}" src="/assets/icons/arrowright.png ">
