--- a/Neocom.WebUI/src/app/components/separator/separator.component.css
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.css
@@ -3,6 +3,14 @@
   line-height: 1.0;
   opacity: 0.7;
   width: 60%;
+  border: 1px red solid;
+  box-shadow: inset 0px 0px 4px 1px red, 0px 0px 4px 1px red;
+}
+.solid-orange {
+  height: 4px;
+  line-height: 1.0;
+  opacity: 0.7;
+  width: 60%;
   border: 1px orange solid;
   box-shadow: inset 0px 0px 4px 1px orange, 0px 0px 4px 1px orange;
 }
