--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -99,6 +99,18 @@ body {
 
 /* S I Z E S */
 
+#neocom-ts30 {
+  font-size: 30px;
+}
+
+#neocom-ts24 {
+  font-size: 24px;
+}
+
+#neocom-ts20 {
+  font-size: 20px;
+}
+
 #neocom-ts18 {
   font-size: 18px;
 }
@@ -178,6 +190,13 @@ body {
   text-shadow: 0px 0px 2px #0000FF;
 }
 
+.neocom-classname-white {
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  /*text-shadow: 0px 0px 2px white;*/
+}
+
 .neocom-marked-name {
   color: orange;
 }
@@ -208,7 +227,7 @@ body {
 
 .neocom-label {
   color: white;
-  font-family: "Imaki";
+  font-family: "Roboto";
   font-size: 9px;
   font-weight: normal;
   line-height: 1.0;
@@ -363,8 +382,9 @@ body {
 .neocom-icon {
   border: white 1px solid;
   box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
-  margin: 5px;
-  /*margin-left: 5px;*/
+  /*margin-left: 3px;*/
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 
