-Testing the spinned and founding the source of the error. -New spinner code finished.
Former-commit-id: 814becec58aabfc33161ab28adf5cd432c671b3b

--- a/NeoCom-WebPOC/src/app/components/spinner/spinner.component.html
+++ b/NeoCom-WebPOC/src/app/components/spinner/spinner.component.html
@@ -1,3 +1,7 @@
-<p>
-  spinner works!
-</p>
+<div>
+  <div class="spinner-position">
+    <span>{{getTitle()}}<br>Waiting: {{getWaitingTime() | date:'mm:ss'}} secs</span>
+    <span class="spinner-in spinner-size60"></span>
+    <div class="spinner-out spinner-size70 spinner-red"></div>
+  </div>
+</div>
