--- a/NeoCom-WebPOC/src/app/pages/spinner-test-page/spinner-test-page.component.html
+++ b/NeoCom-WebPOC/src/app/pages/spinner-test-page/spinner-test-page.component.html
@@ -1,3 +1,2 @@
-<p>
-  spinner-test-page works!
-</p>
+<h2>Testing the Spinner</h2>
+<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
