--- a/NeoCom-WebPOC/src/styles.css
+++ b/NeoCom-WebPOC/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+/* G E N E R A L    D E F I N I T I O N S*/
+
+body {
+  background-color: black;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.0;
+}
+
+
+/* F O N T S */
+
+@font-face {
+  font-family: "Elemental";
+  font-style: normal;
+  font-weight: normal;
+  src: url("./assets/fonts/Elemental End.ttf");
+}
+
+.elemental-ff {
+  font-family: "Elemental"
+}
